# libs/apps/vault/src/main/kotlin/com/k33/platform/app/vault/VaultEndpoint.kt
@@ -1,5 +1,6 @@
 package com.k33.platform.app.vault
 
+import com.k33.platform.app.vault.VaultService.getTransactions
 import com.k33.platform.app.vault.VaultService.getVaultAddresses
 import com.k33.platform.app.vault.VaultService.getVaultAppSettings
 import com.k33.platform.app.vault.VaultService.getVaultAssets
@@ -8,22 +9,33 @@ import com.k33.platform.app.vault.VaultService.updateVaultAppSettings
 import com.k33.platform.identity.auth.gcp.UserInfo
 import com.k33.platform.user.UserId
 import com.k33.platform.utils.logging.logWithMDC
+import io.ktor.http.ContentDisposition
+import io.ktor.http.ContentType
+import io.ktor.http.HeaderValueParam
+import io.ktor.http.HttpHeaders
 import io.ktor.http.HttpStatusCode
 import io.ktor.http.Parameters
 import io.ktor.server.application.Application
+import io.ktor.server.application.ApplicationCall
 import io.ktor.server.application.call
 import io.ktor.server.auth.authenticate
 import io.ktor.server.auth.principal
 import io.ktor.server.plugins.BadRequestException
 import io.ktor.server.request.receive
+import io.ktor.server.response.header
 import io.ktor.server.response.respond
+import io.ktor.server.response.respondBytes
 import io.ktor.server.routing.get
 import io.ktor.server.routing.put
 import io.ktor.server.routing.route
 import io.ktor.server.routing.routing
+import io.ktor.utils.io.core.toByteArray
 import kotlinx.serialization.Serializable
+import java.time.Instant
 import java.time.LocalDate
+import java.time.LocalTime
 import java.time.ZoneId
+import java.time.ZonedDateTime
 import java.time.format.DateTimeParseException
 
 fun Application.module() {
@@ -45,6 +57,15 @@ fun Application.module() {
                     logWithMDC("userId" to userId.value) {
                         val assetId = call.parameters["assetId"]!!
                         call.respond(userId.getVaultAddresses(vaultAssetId = assetId))
+                    }
+                }
+
+                get("transactions") {
+                    val userId = UserId(call.principal<UserInfo>()!!.userId)
+                    logWithMDC("userId" to userId.value) {
+                        val (afterDate, beforeDate, zoneId) = call.request.queryParameters.getDateRange()
+                        val transactions = userId.getTransactions(afterDate to beforeDate, zoneId)
+                        call.respondTransactionsAsCsv(transactions)
                     }
                 }
 
@@ -76,6 +97,17 @@ fun Application.module() {
                 }
             }
         }
+
+        get("/apps/vault/admin/transactions") {
+            val vaultAccountId = call.request.queryParameters["vaultAccountId"]
+                ?: throw BadRequestException("Missing query parameter: vaultAccountId")
+            logWithMDC("vaultAccountId" to vaultAccountId) {
+                val (afterDate, beforeDate, zoneId) = call.request.queryParameters.getDateRange()
+                val transactions = getTransactions(vaultAccountId, afterDate to beforeDate, zoneId)
+                call.respondTransactionsAsCsv(transactions)
+            }
+        }
+
         put("/admin/jobs/generate-vault-accounts-balance-reports/{date?}") {
             val mode = call.request.queryParameters.getEnum("mode") ?: Mode.FETCH_AND_STORE
             val date = call.parameters.getLocalDate("date")
@@ -89,26 +121,64 @@ fun Application.module() {
     }
 }
 
-private inline fun <reified E: Enum<E>> Parameters.getEnum(name: String): E? {
-    return get(name)
-        ?.let {
-            try {
-                enumValueOf<E>(it)
-            } catch (e: IllegalArgumentException) {
-                throw BadRequestException("Invalid enum value: $it of $name")
-            }
+private inline fun <reified E : Enum<E>> Parameters.getEnum(
+    name: String
+): E? = get(name)
+    ?.let {
+        try {
+            enumValueOf<E>(it)
+        } catch (e: IllegalArgumentException) {
+            throw BadRequestException("Invalid enum value: $it of $name")
         }
+    }
+
+private fun Parameters.getLocalDate(
+    name: String
+): LocalDate? = get(name)
+    ?.let {
+        try {
+            LocalDate.parse(it)
+        } catch (e: DateTimeParseException) {
+            throw BadRequestException("Invalid local date value: $it of $name")
+        }
+    }
+
+private fun Parameters.getDateRange(): Triple<Instant, Instant, ZoneId> {
+    val zoneId = this["zoneId"]?.let(ZoneId::of) ?: ZoneId.of("Europe/Oslo")
+    val afterDate = ZonedDateTime.of(getLocalDate("afterDate"), LocalTime.MIN, zoneId).toInstant()
+    val beforeDate = ZonedDateTime.of(getLocalDate("beforeDate"), LocalTime.MAX, zoneId).toInstant()
+    return Triple(afterDate, beforeDate, zoneId)
 }
 
-private fun Parameters.getLocalDate(name: String): LocalDate? {
-    return get(name)
-        ?.let {
-            try {
-                LocalDate.parse(it)
-            } catch (e: DateTimeParseException) {
-                throw BadRequestException("Invalid local date value: $it of $name")
-            }
+private suspend fun ApplicationCall.respondTransactionsAsCsv(
+    transactions: List<Transaction>,
+) {
+    val csvBytes = toCsv(transactions).toByteArray(Charsets.UTF_8)
+    this.response.header(
+        HttpHeaders.ContentDisposition,
+        ContentDisposition.Attachment.withParameters(
+            listOf(
+                HeaderValueParam(ContentDisposition.Parameters.FileName, "transactions.csv"),
+                HeaderValueParam(ContentDisposition.Parameters.Size, csvBytes.size.toString()),
+            )
+        ).toString()
+    )
+    this.respondBytes(
+        bytes = csvBytes,
+        contentType = ContentType.Text.CSV,
+        status = HttpStatusCode.OK,
+    )
+}
+
+private fun toCsv(
+    transactions: List<Transaction>
+): String = buildString {
+    appendLine("Id,CreatedAt,Operation,Direction,Asset,Amount,NetAmount,AmountUSD,FeeCurrency,Fee")
+    transactions.forEach { transaction ->
+        with(transaction) {
+            appendLine(""""$id","$createdAt","$operation","$direction","$assetId",$amount,$netAmount,$amountUSD,"$feeCurrency",$fee""")
         }
+    }
 }
 
 @Serializable
@@ -150,8 +220,10 @@ enum class Mode(
 ) {
     // running on time to store a snapshot of balances and generate PDFs
     FETCH_AND_STORE(fetch = true, store = true),
+
     // testing to generate PDFs only
     FETCH(fetch = true, store = false),
+
     // running later to regenerate PDFs only
     LOAD(fetch = false, store = false);
 
@@ -162,3 +234,16 @@ enum class Mode(
     val useCurrentFxRate: Boolean
         get() = store
 }
+
+data class Transaction(
+    val id: String,
+    val createdAt: String,
+    val operation: String,
+    val direction: String,
+    val assetId: String,
+    val amount: String,
+    val netAmount: String,
+    val amountUSD: String,
+    val feeCurrency: String,
+    val fee: String,
+)
